# jlox-cpp

./: .gitignore  CMakeLists.txt  build.sh  conan.sh  source.txt
src/: CMakeLists.txt  Logger.cpp  Logger.h  Lox.cpp  Lox.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  main.cpp
tests/: CMakeLists.txt  ScannerTest.cpp
